# tablegpt-agent

./: .dockerignore  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  collect_script.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: index.md  reference.md  tutorials.md
docs/explanation/: agent-workflow.md  code-sandbox.md  file-reading.ipynb  file-reading.md  ipython-startup-scripts.md
docs/howto/: cleanup-error-trace.md  customize-table-info.md  incluster-code-execution.md  messages-truncation.ipynb  normalize-datasets.ipynb  normalize-datasets.md  persist-messages.ipynb  persist-messages.md  retrieval.ipynb  retrieval.md
docs/overrides/: main.html
docs/tutorials/: chat-on-tabular-data.ipynb  chat-on-tabular-data.md  continue-analysis-on-generated-charts.ipynb  continue-analysis-on-generated-charts.md  quick-start.ipynb  quickstart.md
eval/: README.md  inference.py  run_text2sql_eval.py  utils.py
eval/agent_eval/: README.md  evaluator.py  example-config.yaml  student.py  student_config.py  workflow.py
eval/agent_eval/grader/: __init__.py  prompt.py
eval/evalset/spider_data/: test.json
eval/text2sql/src/: evaluation.py  gpt_request.py  gpt_request_encoder.py
examples/: data_analysis.py  quick_start.py
examples/datasets/: titanic.csv  产品生产统计表.xlsx  产品销量表.csv
explanation/agent-workflow/: index.html
explanation/code-sandbox/: index.html
explanation/file-reading/: index.html
explanation/ipython-startup-scripts/: index.html
howto/cleanup-error-trace/: index.html
howto/customize-table-info/: index.html
howto/incluster-code-execution/: index.html
howto/normalize-datasets/: index.html
howto/persist-messages/: index.html
howto/retrieval/: index.html
ipython/: README.md  requirements.txt
ipython/ipython-startup-scripts/: 00-pandas.py  98-udfs.py  99-cfont.py
realtabbench/: README.md  inference.py  inference_encoder.py  requirements.txt  run_text2sql_eval.py  utils.py
realtabbench/agent_eval/: __init__.py  __main__.py  config.py  evaluatee.py  evaluatee_config.py  evaluator.py  example-config.yaml  questioner.py  requirements.txt  runner.py  student.py  student_config.py  tablegpt_evaluatee.py  worker.py  workflow.py
realtabbench/agent_eval/evaluator/: __init__.py  output_parser.py  prompt.py
realtabbench/agent_eval/grader/: __init__.py  output_parser.py  prompt.py
realtabbench/evalset/spider_data/: dev.json
realtabbench/text2sql/src/: evaluation.py  gpt_request.py  gpt_request_encoder.py
reference/: index.html
search/: search_index.json
src/tablegpt/: __init__.py  errors.py  safety.py  tools.py  translation.py  utils.py
src/tablegpt/agent/: __init__.py  data_analyzer.py  file_reading.py  output_parser.py
src/tablegpt/agent/file_reading/: __init__.py  data_normalizer.py
src/tablegpt/chains/: __init__.py  data_normalizer.py  guard.py  safety.py  translation.py
src/tablegpt/retriever/: __init__.py  compressor.py  embeddings.py  loader.py  reranker.py  vectorstore.py
stylesheets/: extra.css
tests/: test_profile_init.py  test_safety.py  test_tools.py  test_utils.py
tests/agent/: test_output_parser.py
tests/agent/file_reading/: test_data_normalizer.py
tests/chains/: test_data_normalizer.py  test_guard_output_parser.py  test_safety.py
tests/retriever/: test_compressor.py  test_format.py  test_loader.py
tutorials/chat-on-tabular-data/: index.html
tutorials/continue-analysis-on-generated-charts/: index.html
tutorials/quick-start/: index.html
