[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tablegpt-agent"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Junlin Zhou", email = "jlzhou@zjuici.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "chardet>=5.2.0,<6.0.0",
  "langchain>=0.3.0,<1.0.0",
  "langchain-qdrant>=0.1.4,<1.0.0",
  "langgraph>=0.0.68,<1.0.0",
  "pandas>=2.2,<3.0.0",
  "pppybox>=0.0.13",
]

[project.urls]
Documentation = "https://github.com/ZJUICI/tablegpt-slim-py/libs/tablegpt-agent#README.md"
Issues = "https://github.com/ZJUICI/tablegpt-slim-py/issues"
Source = "https://github.com/ZJUICI/tablegpt-slim-py"

[tool.hatch.version]
path = "src/tablegpt_agent/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tablegpt_agent tests}"

[tool.coverage.run]
source_pkgs = ["tablegpt_agent", "tests"]
branch = true
parallel = true
omit = [
  "src/tablegpt_agent/__about__.py",
]

[tool.coverage.paths]
tablegpt_agent = ["src/tablegpt_agent", "*/tablegpt-agent/src/tablegpt_agent"]
tests = ["tests", "*/tablegpt-agent/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
