[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tablegpt-agent"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
keywords = []
authors = [
  { name = "Junlin Zhou", email = "jlzhou@zjuici.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "chardet>=5.2.0,<6.0.0",
  "langchain>=0.3.0,<1.0.0",
  "langchain-qdrant>=0.1.4,<1.0.0",
  "langgraph>=0.0.68,<1.0.0",
  "pandas>=2.2,<3.0.0",
  "pppybox>=0.0.13",
]

[project.urls]
Documentation = "https://github.com/tablegpt/tablegpt/blob/main/README.md"
Issues = "https://github.com/tablegpt/tablegpt/issues"
Source = "https://github.com/tablegpt/tablegpt"

[tool.hatch.build.targets.wheel]
packages = ["src/tablegpt"]

[tool.hatch.version]
path = "src/tablegpt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tablegpt tests}"

[tool.coverage.run]
source_pkgs = ["tablegpt", "tests"]
branch = true
parallel = true
omit = [
  "src/tablegpt/__about__.py",
]

[tool.coverage.paths]
tablegpt = ["src/tablegpt"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
