[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tablegpt-agent"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Aofeng Su", email = "saf@zjuici.com" },
  { name = "Chen Zhou", email = "zc@zjuici.com" },
  { name = "Junbo Zhao", email = "j.zhao@zju.edu.cn" },
  { name = "Junlin Zhou", email = "jlzhou@zjuici.com" },
  { name = "Tao Zhang", email = "zt@zjuici.com" },
  { name = "Xiang Li", email = "xli@zjuici.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "chardet>=5.2.0,<6.0.0",
  "langchain-core>=0.3.0,<1.0.0",
  "langgraph>=0.0.68,<1.0.0",
  "pandas>=2.2,<3.0.0",
  "pppybox>=0.0.17"
]

[project.urls]
Documentation = "https://tablegpt.github.io/tablegpt-agent/"
Issues = "https://github.com/tablegpt/tablegpt-agent/issues"
Source = "https://github.com/tablegpt/tablegpt-agent"

[project.optional-dependencies]
local = [
  "pandas >=2.2,<3.0.0",
  "scipy >=1.13.0,<2.0.0",
  "tabulate >=0.9.0,<1.0.0",
  "scikit-learn >=1.0.0,<2.0.0",
  "statsmodels >=0.10.0,<1.0.0",
  "matplotlib >=3.8.4,<4.0.0",
  "seaborn >=0.13.1,<1.0.0",
  "mplfonts >=0.0.8,<1.0.0",
  "numexpr >=2.8.4",
  "openpyxl >=3.1.2,<4.0.0",
  "xlrd >= 2.0.1",
  "odfpy",
  "pppybox[local]"
]

[tool.hatch.build.targets.sdist]
exclude = [
  ".devcontainer",
  ".github",
  "/docs",
  "/examples",
  "/realtabbench",
  "collect_script.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tablegpt"]

[tool.hatch.build.targets.wheel.shared-data]
"ipython/ipython-startup-scripts" = "share/ipykernel/profile/tablegpt/startup"

[tool.hatch.version]
path = "src/tablegpt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tablegpt tests}"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-jupyter",
  "mkdocs-material",
]

[tool.coverage.run]
source_pkgs = ["tablegpt", "tests"]
branch = true
parallel = true
omit = [
  "src/tablegpt/__about__.py",
]

[tool.coverage.paths]
tablegpt = ["src/tablegpt"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  "ipython"
]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "sqlalchemy.orm.DeclarativeBase"]
runtime-evaluated-decorators = ["pydantic.validate_call", "attrs.define"]
